--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
       background-size: cover;
   }
   
-  #overlay {
+  #wild {
       position: fixed;
       overflow: auto;
       width: 100%;
